@@ -1,6 +1,12 @@
 2017-04-20  Ulf Hermann  <ulf.hermann@qt.io>
 	    Mark Wielaard  <mark@klomp.org>
 
+	* derelocate.c (compare_secrefs): Compare by end address and then by
+	section number if addresses are equal.
+
+2017-04-20  Ulf Hermann  <ulf.hermann@qt.io>
+	    Mark Wielaard  <mark@klomp.org>
+
 	* linux-kernel-modules.c: Always return NULL from kernel_release() on
 	non-linux systems and set errno to ENOTSUP.
 
